before cart table

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center">
   <form
-    class="w-25 rounded-5 shadow-lg p-4 form d-flex flex-column"
+    class="w-25 rounded-3 shadow-lg p-4 form d-flex flex-column"
     (ngSubmit)="handleSubmit(form)"
     #form="ngForm"
   >
@@ -65,7 +65,7 @@
     <button
       type="submit"
       class="btn btn-dark m-auto mb-3"
-      [disabled]="form.errors && form.invalid"
+      [disabled]="form.errors || form.invalid"
     >
       Submit
     </button>
