--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -2,6 +2,6 @@
   <app-product-card
     *ngFor="let product of products"
     [product]="product"
-    class="card m-2"
+    class="card m-2 shadow-lg"
   ></app-product-card>
 </div>
