--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,19 +1,19 @@
 .main-container {
   height: 70vh;
   .form {
-    max-width: 600px;
-    width: 80%;
+    max-width: 400px;
+    width: 100%;
     min-width: 300px;
     margin: auto;
     text-align: center;
     .inputs-container {
       display: flex;
       flex-direction: row;
-      justify-content: center;
+      justify-content: space-between;
       flex-wrap: wrap;
       .input{
-        width: 40%;
-        margin: 10px;
+        width: 48%;
+        // margin: 10px;
       }
     }
   }
