--- a/src/app/modules/shared/product/product.component.html
+++ b/src/app/modules/shared/product/product.component.html
@@ -1,7 +1,8 @@
 <div class="container main-container">
   <div class="container row pb-3">
     <a class="pointer fs-5 text-dark" [routerLink]="['/product']"
-      ><fa-icon [icon]="faArrowLeftLong"></fa-icon> Back to store</a
+      ><fa-icon class="me-2" [icon]="faArrowLeftLong"></fa-icon> Back to
+      store</a
     >
   </div>
   <div class="container main-content row">
