--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,8 @@
-<div class="row d-flex container m-auto mb-5 justify-content-center">
+
+<div
+  class="row d-flex container m-auto mb-5 justify-content-center"
+  *ngIf="!loading"
+>
   <app-product-card
     *ngFor="let product of products"
     [product]="product"
