--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -3,8 +3,13 @@
 >
   <div class="container">
     <a class="navbar-brand fs-3" [routerLink]="['/product']">Logo</a>
-    <a class="ms-auto me-lg-2 me-4 position-relative  cart " [routerLink]="['/cart']" routerLinkActive="active">
-      <fa-icon [icon]="faCartShopping" class="text-light icon  opacity-50 fs-5"> </fa-icon>
+    <a
+      class="ms-auto me-lg-2 me-4 position-relative cart"
+      [routerLink]="['/cart']"
+      routerLinkActive="active"
+    >
+      <fa-icon [icon]="faCartShopping" class="text-light icon opacity-50 fs-5">
+      </fa-icon>
       <span
         class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
         *ngIf="count > 0"
@@ -39,7 +44,7 @@
             >Store</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!isLoggedIn">
           <a
             class="nav-link"
             [routerLink]="['/login']"
@@ -47,13 +52,20 @@
             >Login</a
           >
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!isLoggedIn">
           <a
             class="nav-link"
             [routerLink]="['/register']"
             routerLinkActive="active"
             >Register</a
           >
+        </li>
+        <li class="nav-item" *ngIf="isLoggedIn">
+          <button class="nav-link btn" (click)="logout()">
+            Logout
+
+            <fa-icon [icon]="logoutIcon" class="ms-1"> </fa-icon>
+          </button>
         </li>
       </ul>
     </div>
